[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/fonts/menu_buttons.tres" type="DynamicFont" id=1]
[ext_resource path="res://asset/fonts/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://asset/audio/bgm/bgm_menu.wav" type="AudioStream" id=4]
[ext_resource path="res://asset/sprite/sfondo.png" type="Texture" id=5]

[node name="Main Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 540.0
rect_clip_content = true
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 150.0
margin_top = 40.0
margin_right = 874.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 40
alignment = 1

[node name="Title" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 724.0
margin_bottom = 100.0
grow_vertical = 2
rect_min_size = Vector2( 724, 100 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=40 freq=1.5]Legambiente 2077[/wave][/center]"
text = "Legambiente 2077"

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 724.0
margin_bottom = 190.0
rect_min_size = Vector2( 724, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Play"
flat = true

[node name="Howto" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 724.0
margin_bottom = 280.0
rect_min_size = Vector2( 724, 50 )
custom_fonts/font = ExtResource( 1 )
text = "how to play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 724.0
margin_bottom = 370.0
rect_min_size = Vector2( 724, 50 )
custom_fonts/font = ExtResource( 1 )
text = "credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 724.0
margin_bottom = 460.0
rect_min_size = Vector2( 724, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Quit"
flat = true

[node name="HowtoText" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 140.0
margin_right = 724.0
margin_bottom = 491.0
grow_vertical = 0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Open the first trashcan using the spacebar. Select the trashcans with the keys 1-4 and move them with the arrow keys. The tree on the left is your healthbar.

(press spacebar to return to the menu)"
text = "Open the first trashcan using the spacebar. Select the trashcans with the keys 1-4 and move them with the arrow keys. The tree on the left is your healthbar.

(press spacebar to return to the menu)"
fit_content_height = true
scroll_active = false

[node name="CreditsText" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 531.0
margin_right = 724.0
margin_bottom = 804.0
grow_vertical = 0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Joel: Graphics, programming
Mauro: Programming
Gabry: Programming
Gambero: Audio, Menu, [rainbow freq=0.2 sat=10 val = 20]bordello[/rainbow]

(press spacebar to return to the menu)"
text = "Joel: Graphics, programming
Mauro: Programming
Gabry: Programming
Gambero: Audio, Menu, bordello

(press spacebar to return to the menu)"
fit_content_height = true
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
autoplay = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Howto" to="." method="_on_Howto_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
